--- a/SMS/SMSapp/templates/login.html
+++ b/SMS/SMSapp/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>SMS Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- add icon to web browser tab -->
+    <!-- Add icon to web browser tab -->
     <link rel="shortcut icon" type="lspu-icon" href="{% static 'icons/logo.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
