--- a/SMS/SMSapp/templates/studgroup.html
+++ b/SMS/SMSapp/templates/studgroup.html
@@ -6,7 +6,7 @@
     <title>Student Grouping and Profiling</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'script.js' %}"></script>
-    <!-- add icon to web browser tab -->
+    <!-- Add icon to web browser tab -->
     <link rel="shortcut icon" type="lspu-icon" href="{% static 'icons/logo.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -200,18 +200,18 @@
             position: relative;
             transition: all 0.35s;
             display: flex;
-            align-items: center; /* vertical align */
-            gap: 0.75rem; /* space between icon and text */
+            align-items: center; /* Vertical align */
+            gap: 0.75rem; /* Space between icon and text */
         }
 
         .sidebar-icon {
-            /* smaller side bar icons */
+            /* Smaller side bar icons */
             width: 24px;
             height: 24px;
             flex-shrink: 0;
         }
 
-        /* sidebar links span text */
+        /* Sidebar links span text */
         .sidebar-link span {
             font-size: 0.95rem;
             font-weight: 500;
@@ -257,7 +257,7 @@
             border-color: #5d9861 !important;
         }
 
-        /* make it responsive */
+        /* Make it responsive */
         @media (max-width:768px) {
             .sidebar-toggle{
                 margin-left: -264px;
