--- a/SMS/SMSapp/templates/droprisk.html
+++ b/SMS/SMSapp/templates/droprisk.html
@@ -52,7 +52,7 @@
                     </a>
                     <ul id="academics" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                         <li class="sidebar-item">
-                            <a href="{% url 'classman' %}" class="sidebar-link">
+                            <a href="{% url 'academics' %}" class="sidebar-link">
                                 <img src="{% static 'icons/attendance.png' %}" alt="Attendance" class="me-3" style="max-width: 40px;">
                                 <span>Attendance</span>
                             </a>
